--- a/Restaurant/appsettings.json
+++ b/Restaurant/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RestaurantDb": "Server=USER-PC;Database=RestaurantDb;Integrated Security=SSPI;TrustServerCertificate=True;"
+  }
 }
