--- a/Restaurant/appsettings.json
+++ b/Restaurant/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "RestaurantDb": "Server=USER-PC;Database=RestaurantDb;Integrated Security=SSPI;TrustServerCertificate=True;"
+  },
+  "JwtSettings": {
+    "SigningKey": "f5422e6cdfde4af3bf631c7dd1f80b97",
+    "Issuer": "Restaurant",
+    "Audiences": ["SwaggerUI"]
   }
 }
